# imdb-rename

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml
.github/workflows/: ci.yml
ci/: before_deploy.sh  install.sh  script.sh  utils.sh
data/eval/: truth.toml
data/test/small/: title.akas.tsv  title.basics.tsv  title.episode.tsv  title.ratings.tsv
imdb-eval/: Cargo.toml  README.md
imdb-eval/src/: eval.rs  logger.rs  main.rs
imdb-index/: Cargo.toml  README.md
imdb-index/src/: error.rs  lib.rs  record.rs  scored.rs  search.rs  util.rs
imdb-index/src/index/: aka.rs  episode.rs  id.rs  mod.rs  names.rs  rating.rs  tests.rs  writer.rs
src/: download.rs  logger.rs  main.rs  rename.rs  util.rs
