[package]
name = "imdb-rename"
version = "0.1.4"
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
A command line utility for searching IMDb and renaming your media files.
"""
documentation = "https://github.com/BurntSushi/imdb-rename"
homepage = "https://github.com/BurntSushi/imdb-rename"
repository = "https://github.com/BurntSushi/imdb-rename"
readme = "README.md"
keywords = ["imdb", "movie", "index", "search", "name"]
license = "Unlicense/MIT"
edition = "2018"

[workspace]
members = ["imdb-eval", "imdb-index"]

[dependencies]
bstr = { version = "0.2.0", default-features = false, features = ["std"] }
clap = "2.32.0"
failure = "0.1"
flate2 = "1"
imdb-index = { version = "0.1.3", path = "imdb-index" }
lazy_static = "1.1"
log = { version = "0.4", features = ["std"] }
regex = "1"
reqwest = "0.9.2"
tabwriter = "1"
walkdir = "2.2.5"

[profile.release]
debug = true
