[package]
name = "imdb-rename"
version = "0.1.5"
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
A command line utility for searching IMDb and renaming your media files.
"""
documentation = "https://github.com/BurntSushi/imdb-rename"
homepage = "https://github.com/BurntSushi/imdb-rename"
repository = "https://github.com/BurntSushi/imdb-rename"
readme = "README.md"
keywords = ["imdb", "movie", "index", "search", "name"]
license = "Unlicense/MIT"
edition = "2021"

[workspace]
members = ["imdb-eval", "imdb-index"]

[dependencies]
anyhow = "1.0.32"
bstr = { version = "0.2.13", default-features = false, features = ["std"] }
clap = { version = "2.33.1", default-features = false }
flate2 = "1.0.16"
imdb-index = { version = "0.1.3", path = "imdb-index" }
lazy_static = "1.4.0"
log = { version = "0.4.11", features = ["std"] }
regex = "1.3.9"
tabwriter = "1.2.1"
ureq = { version = "1.3.0", default-features = false, features = ["tls"] }
walkdir = "2.3.1"

[profile.release]
debug = true
