[package]
name = "imdb-rename"
version = "0.1.6"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
A command line utility for searching IMDb and renaming your media files.
"""
documentation = "https://github.com/BurntSushi/imdb-rename"
homepage = "https://github.com/BurntSushi/imdb-rename"
repository = "https://github.com/BurntSushi/imdb-rename"
readme = "README.md"
keywords = ["imdb", "movie", "index", "search", "name"]
license = "Unlicense/MIT"
edition = "2021"

[workspace]
members = ["imdb-eval", "imdb-index"]

[dependencies]
anyhow = "1.0.75"
bstr = { version = "1.8.0", default-features = false, features = ["std"] }
clap = { version = "2.34.0", default-features = false }
flate2 = "1.0.28"
imdb-index = { version = "0.1.4", path = "imdb-index" }
lazy_static = "1.4.0"
log = { version = "0.4.20", features = ["std"] }
regex = "1.10.2"
tabwriter = "1.3.0"
ureq = { version = "2.9.1", default-features = false, features = ["tls"] }
walkdir = "2.4.0"

[profile.release]
debug = true
