[package]
name = "imdb-eval"
version = "0.1.2"
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
A command line utility for evaluating the IMDb name index.
"""
documentation = "https://github.com/BurntSushi/imdb-rename"
homepage = "https://github.com/BurntSushi/imdb-rename"
repository = "https://github.com/BurntSushi/imdb-rename"
readme = "README.md"
keywords = ["imdb", "index", "search", "name", "evaluation"]
license = "Unlicense/MIT"
edition = "2018"

[dependencies]
clap = { version = "2.33.1", default-features = false }
csv = "1.1.3"
failure = "0.1.8"
imdb-index = { version = "0.1.3", path = "../imdb-index" }
lazy_static = "1.4.0"
log = { version = "0.4.11", features = ["std"] }
regex = "1.3.9"
serde = { version = "1.0.114", features = ["derive"] }
tempdir = "0.3.7"
toml = "0.5.6"
