[package]
name = "imdb-eval"
version = "0.1.2"
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
A command line utility for evaluating the IMDb name index.
"""
documentation = "https://github.com/BurntSushi/imdb-rename"
homepage = "https://github.com/BurntSushi/imdb-rename"
repository = "https://github.com/BurntSushi/imdb-rename"
readme = "README.md"
keywords = ["imdb", "index", "search", "name", "evaluation"]
license = "Unlicense/MIT"
edition = "2018"

[dependencies]
anyhow = "1.0.32"
clap = { version = "2.33.1", default-features = false }
csv = "1.1.3"
imdb-index = { version = "0.1.3", path = "../imdb-index" }
lazy_static = "1.4.0"
log = { version = "0.4.11", features = ["std"] }
serde = { version = "1.0.114", features = ["derive"] }
toml = "0.5.6"
