[package]
name = "imdb-index"
version = "0.1.3"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
A library for indexing and searching IMDb using information retrieval.
"""
documentation = "https://github.com/BurntSushi/imdb-rename"
homepage = "https://github.com/BurntSushi/imdb-rename"
repository = "https://github.com/BurntSushi/imdb-rename"
readme = "README.md"
keywords = ["imdb", "movie", "index", "search"]
license = "Unlicense/MIT"
edition = "2021"

[dependencies]
byteorder = "1"
csv = "1.0.1"
failure = "0.1"
fnv = "1"
fst = "0.3"
lazy_static = "1.1"
log = { version = "0.4", features = ["std"] }
memmap = "0.6"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strsim = "0.8"

[dev-dependencies]
tempdir = "0.3.7"
