[package]
name = "imdb-index"
version = "0.1.3"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
A library for indexing and searching IMDb using information retrieval.
"""
documentation = "https://github.com/BurntSushi/imdb-rename"
homepage = "https://github.com/BurntSushi/imdb-rename"
repository = "https://github.com/BurntSushi/imdb-rename"
readme = "README.md"
keywords = ["imdb", "movie", "index", "search"]
license = "Unlicense/MIT"
edition = "2021"

[dependencies]
csv = "1.1.3"
fnv = "1.0.7"
fst = "0.4.4"
lazy_static = "1.4.0"
log = { version = "0.4.11", features = ["std"] }
memmap = "0.7.0"
regex = "1.3.9"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
strsim = "0.10.0"
