[package]
name = "imdb-index"
version = "0.1.3"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
A library for indexing and searching IMDb using information retrieval.
"""
documentation = "https://github.com/BurntSushi/imdb-rename"
homepage = "https://github.com/BurntSushi/imdb-rename"
repository = "https://github.com/BurntSushi/imdb-rename"
readme = "README.md"
keywords = ["imdb", "movie", "index", "search"]
license = "Unlicense/MIT"
edition = "2021"

[dependencies]
csv = "1.3.0"
fnv = "1.0.7"
fst = "0.4.7"
lazy_static = "1.4.0"
log = { version = "0.4.20", features = ["std"] }
memmap = { package = "memmap2", version = "0.9.1" }
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
strsim = "0.10.0"
